--- a/src/Footer.css
+++ b/src/Footer.css
@@ -5,6 +5,7 @@ footer {
   font-size: 12px;
   text-align: center;
   font-weight: 700;
+  margin-top: 45px;
 }
 
 footer ul {
